--- a/index.html
+++ b/index.html
@@ -137,36 +137,238 @@
   </nav>
   <!--End Menu Site -->
 
-  <!-- Promotion Banner  -->
-  <section id="bannerpromocionais" class="carousel slide container">
+  <!-- Main -->
+  <main>
+    <!-- Promotion Banner  -->
+    <section id="bannerpromocionais" class="carousel slide container">
 
-    <!-- Imagens -->
-    <article class="carousel-inner">
-      <figure class="carousel-item active">
-        <img src="./assets/imagem/banner-1.jpg" class="d-block w-100" alt="Banner Promocional Lançamento Verão">
-      </figure>
-      <figure class="carousel-item">
-        <img src="./assets/imagem/banner-2.jpg" class="d-block w-100" alt="Banner Promocional vários Itens">
-      </figure>
-    </article>
-    <!-- End Imagens -->
+      <!-- Imagens -->
+      <article class="carousel-inner">
+        <figure class="carousel-item active">
+          <img src="./assets/imagem/banner-1.jpg" class="d-block w-100" alt="Banner Promocional Lançamento Verão">
+        </figure>
+        <figure class="carousel-item">
+          <img src="./assets/imagem/banner-2.jpg" class="d-block w-100" alt="Banner Promocional vários Itens">
+        </figure>
+      </article>
+      <!-- End Imagens -->
 
-    <!-- Prev and Next -->
-    <button class="carousel-control-prev" type="button" data-bs-target="#bannerpromocionais" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#bannerpromocionais" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-    <!-- End Prev and Next -->
-  </section>
-  <!-- End Promotion Banner  -->
+      <!-- Prev and Next -->
+      <button class="carousel-control-prev" type="button" data-bs-target="#bannerpromocionais" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#bannerpromocionais" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+      <!-- End Prev and Next -->
+    </section>
+    <!-- End Promotion Banner  -->
+
+    <!-- Promotion Banner 6 columns  -->
+    <section class="container">
+
+      <!-- row -->
+      <section class="row">
+        <!-- Banners -->
+        <article class="col-md-6">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-credit-card"
+            viewBox="0 0 16 16">
+            <path
+              d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4zm2-1a1 1 0 0 0-1 1v1h14V4a1 1 0 0 0-1-1H2zm13 4H1v5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V7z" />
+            <path d="M2 10a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1v-1z" />
+          </svg>
+          <p>
+            Parcele em até <br>
+            <strong>12x sem juros</strong>
+          </p>
+        </article>
+        <article class="col-md-6">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart-fill"
+            viewBox="0 0 16 16">
+            <path
+              d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
+          </svg>
+          <p>
+            Entrega para <br>
+            <strong>todo Brasil</strong>
+          </p>
+        </article>
+        <!-- End Banners -->
+      </section>
+      <!-- End row -->
+    </section>
+    <!-- EndPromotion Banner 6 columns  -->
+
+    <!-- Container Produtos -->
+    <section class="container">
+      <!-- Title -->
+      <h1 class="text-center">Mais Populares</h1>
+
+      <!-- Produtcts list -->
+      <article class="row">
+
+        <!-- Products -->
+        <section class="produtos col-md-3">
+          <!-- Product Image -->
+          <img src="./assets/imagem/cropped-rosa.jpg" class="img-fluid" alt="Cropped rosa">
+
+          <!-- Product Itens -->
+          <article class="produtos-itens">
+            <!-- Product title -->
+            <h2>Cropped rosa</h2>
+
+            <!-- Product  stars -->
+            <div class="produtos-stars">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill"
+                viewBox="0 0 16 16">
+                <path
+                  d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill"
+                viewBox="0 0 16 16">
+                <path
+                  d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill"
+                viewBox="0 0 16 16">
+                <path
+                  d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+              </svg>
+            </div>
+
+            <!-- Product value -->
+            <trong>R$ 59,90</trong>
+          </article>
+        </section>
+        <!-- End Products -->
+
+        <!-- Products -->
+        <section class="produtos col-md-3">
+          <!-- Product Image -->
+          <img src="./assets/imagem/camiseta-manga-comprida.jpg" class="img-fluid" alt="Camiseta manga comprida">
+
+          <!-- Product Itens -->
+          <article class="produtos-itens">
+            <!-- Product title -->
+            <h2>Camiseta manga comprida</h2>
+
+            <!-- Product  stars -->
+            <div class="produtos-stars">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill"
+                viewBox="0 0 16 16">
+                <path
+                  d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill"
+                viewBox="0 0 16 16">
+                <path
+                  d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill"
+                viewBox="0 0 16 16">
+                <path
+                  d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill"
+                viewBox="0 0 16 16">
+                <path
+                  d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+              </svg>
+            </div>
+
+            <!-- Product value -->
+            <trong>R$ 79,90</trong>
+          </article>
+        </section>
+        <!-- End Products -->
+
+        <!-- Products -->
+        <section class="produtos col-md-3">
+          <!-- Product Image -->
+          <img src="./assets/imagem/camiseta-listrada.jpg" class="img-fluid" alt="Camiseta listrada">
+
+          <!-- Product Itens -->
+          <article class="produtos-itens">
+            <!-- Product title -->
+            <h2>Camiseta listrada</h2>
+
+            <!-- Product  stars -->
+            <div class="produtos-stars">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill"
+                viewBox="0 0 16 16">
+                <path
+                  d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill"
+                viewBox="0 0 16 16">
+                <path
+                  d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill"
+                viewBox="0 0 16 16">
+                <path
+                  d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+              </svg>
+            </div>
+
+            <!-- Product value -->
+            <trong>R$ 49,90</trong>
+          </article>
+        </section>
+        <!-- End Products -->
+
+        <!-- Products -->
+        <section class="produtos col-md-3">
+          <!-- Product Image -->
+          <img src="./assets/imagem/saia-plisada.jpg" class="img-fluid" alt="Saia plisada">
+
+          <!-- Product Itens -->
+          <article class="produtos-itens">
+            <!-- Product title -->
+            <h2>Saia plisada</h2>
+
+            <!-- Product  stars -->
+            <div class="produtos-stars">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill"
+                viewBox="0 0 16 16">
+                <path
+                  d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill"
+                viewBox="0 0 16 16">
+                <path
+                  d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill"
+                viewBox="0 0 16 16">
+                <path
+                  d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+              </svg>
+            </div>
+
+            <!-- Product value -->
+            <trong>R$ 117,90</trong>
+          </article>
+        </section>
+        <!-- End Products -->
+      </article>
+      <!-- End Produtcts list -->
+      <div class="d-flex justify-content-center">
+        <button type="button" class="btn btn-warning col-md-2">Veja mais</button>
+      </div>
+    </section>
+    <!-- End Container Produtos -->
+
+
+  </main>
+  <!-- EndMain -->
 
   <!--JS Bootstrap Files-->
   <script src="./assets/js/bootstrap.bundle.min.js"></script>
   <script src="./assets/js/popper.min.js"></script>
+
 </body>
 
 </html>
