Header adjusts and scss configuration

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <meta name="msapplication-TileImage" content="./assets/imagem/favicons/ms-icon-144x144.png">
   <meta name="theme-color" content="#FFC107">
   <!--End Favicons-->
+
   <!--CSS-->
   <link rel="stylesheet" href="./assets/css/style.css">
 </head>
@@ -34,7 +35,7 @@
     <!--Container-->
     <section class="container">
       <!-- row-->
-      <article class="row">
+      <article class="row d-flex align-items-center">
 
         <!--Logo-->
         <a href="/" class="col-md-2">
@@ -42,11 +43,11 @@
         </a>
 
         <!-- Search-->
-        <form action="#" class="col-md-7">
+        <form action="#" class="col-md-7 d-flex align-items-center">
           <input type="text" name="name" placeholder="Procurar Roupas aqui"></input>
 
 
-          <button>
+          <button class="d-flex align-items-center">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search"
               viewBox="0 0 16 16">
               <path
@@ -55,10 +56,10 @@
           </button>
         </form>
         <!-- Client Admin -->
-        <ul class="col-md-3 nav">
+        <ul class="col-md-3 nav d-flex align-items-center justify-content-around">
           <li class="nav-item">
             <a href="#">
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+              <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor"
                 class="bi bi-person-fill" viewBox="0 0 16 16">
                 <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3Zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z" />
               </svg>
@@ -66,10 +67,10 @@
             </a>
           </li>
           <li class="nav-item">
-            <span class="notification">3</span>
+            <span class="notification  d-flex align-items-center justify-content-center">3</span>
             <a href="#">
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart-fill"
-                viewBox="0 0 16 16">
+              <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor"
+                class="bi bi-cart-fill" viewBox="0 0 16 16">
                 <path
                   d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
               </svg>
@@ -363,7 +364,114 @@
 
 
   </main>
-  <!-- EndMain -->
+  <!-- End Main -->
+
+  <!-- Footer -->
+  <footer class="container-fluid">
+
+    <!-- Container Menu -->
+    <section class="container">
+      <!-- Menu -->
+      <section class="row">
+        <!--  Atendimento -->
+        <article class="col-md-4">
+
+          <h4>
+            Atendimento
+          </h4>
+          <!-- Links -->
+          <ul class="nav flex-column">
+            <li class="nav-item">
+              <a href="tel:+5511199999999"> (11) 9 9999 9999</a>
+            </li>
+            <li class="nav-item">
+              <a href="mailto:contato@sualoja.com.br">contato@sualoja.com.br</a>
+            </li>
+            <li class="nav-item">
+              Horário de atendimento on-line:
+              Segunda à sexta das 9:00 até as 17:30h
+            </li>
+          </ul>
+          <!--End Links -->
+        </article>
+        <!--  End Atendimento-->
+
+        <!-- Acesso Rapido-->
+        <article class="col-md-3">
+
+          <h4>
+            Acesso rápido
+          </h4>
+          <!-- Links -->
+          <ul class="nav flex-column">
+            <li class="nav-item">
+              <a href="#"> Minha conta</a>
+            </li>
+            <li class="nav-item">
+              <a href="#">Meus pedidos</a>
+            </li>
+            <li class="nav-item">
+              <a href="#">Rastrear meus pedidos</a>
+            </li>
+            <li class="nav-item">
+              <a href="#">Troca e devoluções</a>
+            </li>
+
+
+          </ul>
+          <!--End Links -->
+        </article>
+        <!-- End Acesso Rapido-->
+
+        <!-- Institucional -->
+        <article class="col-md-3">
+
+          <h4>
+            Institucional
+          </h4>
+          <!-- Links -->
+          <ul class="nav flex-column">
+            <li class="nav-item">
+              <a href="#">Sobre a loja </a>
+            </li>
+            <li class="nav-item">
+              <a href="#">Politica e privacidad</a>
+            </li>
+          </ul>
+          <!--End Links -->
+        </article>
+        <!-- End Institucional  -->
+
+        <!-- Mais acessadas -->
+        <article class="col-md-2">
+
+          <h4>
+            Mais acessada
+          </h4>
+          <!-- Links -->
+          <ul class="nav flex-column">
+            <li class="nav-item">
+              <a href="#"> Cropped rosa</a>
+            </li>
+            <li class="nav-item">
+              <a href="#">Camiseta manga comprida</a>
+            </li>
+            <li class="nav-item">
+              <a href="#">Camiseta listrada</a>
+            </li>
+            <li class="nav-item">
+              <a href="#">Saia plisada</a>
+            </li>
+          </ul>
+          <!--End Links -->
+        </article>
+        <!-- End Mais acessadas -->
+      </section>
+      <!-- End Menu -->
+    </section>
+    <!-- End Container Menu -->
+  </footer>
+  <!-- End Footer -->
 
   <!--JS Bootstrap Files-->
   <script src="./assets/js/bootstrap.bundle.min.js"></script>
