adding new css style

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
       <!-- Menu -->
       <ul class="nav">
         <!-- Menu Itens -->
-        <li class="nav-item">
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list"
+        <li class="col-md-2 nav-item d-flex align-items-center">
+          <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" class="bi bi-list"
             viewBox="0 0 16 16">
             <path fill-rule="evenodd"
               d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
@@ -104,25 +104,35 @@
           <!-- Submenu -->
           <ul class="nav flex-column">
             <li class="nav-item">
-              Lançamentos
+              <a href="#">
+                Lançamentos
+              </a>
             </li>
             <li class="nav-item">
-              Plus Size
+              <a href="#">
+                Plus Size
+              </a>
             </li>
             <li class="nav-item">
-              Moda Praia
+              <a href="#">
+                Moda Praia
+              </a>
             </li>
             <li class="nav-item">
-              Acessórios
+              <a href="#">
+                Acessórios
+              </a>
             </li>
             <li class="nav-item">
-              Promoção
+              <a href="#">
+                Promoção
+              </a>
             </li>
           </ul>
           <!-- End Submenu -->
         </li>
-        <li class="nav-item">
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list"
+        <li class="col-md-2 nav-item d-flex align-items-center">
+          <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" class="bi bi-list"
             viewBox="0 0 16 16">
             <path fill-rule="evenodd"
               d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
@@ -168,33 +178,38 @@
     <!-- End Promotion Banner  -->
 
     <!-- Promotion Banner 6 columns  -->
-    <section class="container">
+    <section class="container banner-promocionais-statico">
 
       <!-- row -->
       <section class="row">
         <!-- Banners -->
         <article class="col-md-6">
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-credit-card"
-            viewBox="0 0 16 16">
-            <path
-              d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4zm2-1a1 1 0 0 0-1 1v1h14V4a1 1 0 0 0-1-1H2zm13 4H1v5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V7z" />
-            <path d="M2 10a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1v-1z" />
-          </svg>
-          <p>
-            Parcele em até <br>
-            <strong>12x sem juros</strong>
-          </p>
+          <div class="banner-promocionais-statico-12x d-flex align-items-center">
+            <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor"
+              class="bi bi-credit-card" viewBox="0 0 16 16">
+              <path
+                d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4zm2-1a1 1 0 0 0-1 1v1h14V4a1 1 0 0 0-1-1H2zm13 4H1v5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V7z" />
+              <path d="M2 10a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1v-1z" />
+            </svg>
+            <p>
+              Parcele em até <br>
+              <strong>12x sem juros</strong>
+            </p>
+          </div>
         </article>
+        <!-- Banners -->
         <article class="col-md-6">
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart-fill"
-            viewBox="0 0 16 16">
-            <path
-              d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
-          </svg>
-          <p>
-            Entrega para <br>
-            <strong>todo Brasil</strong>
-          </p>
+          <div class="banner-promocionais-statico-todo-br d-flex align-items-center">
+            <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" class="bi bi-cart-fill"
+              viewBox="0 0 16 16">
+              <path
+                d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
+            </svg>
+            <p>
+              Entrega para <br>
+              <strong>todo Brasil</strong>
+            </p>
+          </div>
         </article>
         <!-- End Banners -->
       </section>
@@ -211,7 +226,7 @@
       <article class="row">
 
         <!-- Products -->
-        <section class="produtos col-md-3">
+        <a href="#" class="produtos-container col-md-3">
           <!-- Product Image -->
           <img src="./assets/imagem/cropped-rosa.jpg" class="img-fluid" alt="Cropped rosa">
 
@@ -242,11 +257,11 @@
             <!-- Product value -->
             <trong>R$ 59,90</trong>
           </article>
-        </section>
+        </a>
         <!-- End Products -->
 
         <!-- Products -->
-        <section class="produtos col-md-3">
+        <a href="#" class="produtos-container col-md-3">
           <!-- Product Image -->
           <img src="./assets/imagem/camiseta-manga-comprida.jpg" class="img-fluid" alt="Camiseta manga comprida">
 
@@ -282,11 +297,11 @@
             <!-- Product value -->
             <trong>R$ 79,90</trong>
           </article>
-        </section>
+        </a>
         <!-- End Products -->
 
         <!-- Products -->
-        <section class="produtos col-md-3">
+        <a href="#" class="produtos-container col-md-3">
           <!-- Product Image -->
           <img src="./assets/imagem/camiseta-listrada.jpg" class="img-fluid" alt="Camiseta listrada">
 
@@ -317,11 +332,11 @@
             <!-- Product value -->
             <trong>R$ 49,90</trong>
           </article>
-        </section>
+        </a>
         <!-- End Products -->
 
         <!-- Products -->
-        <section class="produtos col-md-3">
+        <a href="#" class="produtos-container col-md-3">
           <!-- Product Image -->
           <img src="./assets/imagem/saia-plisada.jpg" class="img-fluid" alt="Saia plisada">
 
@@ -352,7 +367,7 @@
             <!-- Product value -->
             <trong>R$ 117,90</trong>
           </article>
-        </section>
+        </a>
         <!-- End Products -->
       </article>
       <!-- End Produtcts list -->
