--- a/produto-camisa-manga-comprida.html
+++ b/produto-camisa-manga-comprida.html
@@ -167,13 +167,13 @@
       <!-- Produtos -->
       <article class="row produtos-compras">
         <!-- Imagem -->
-        <figure class="col-md-7">
+        <figure class="col-md-7 mb-3">
           <img src="./assets/imagem/foto-carrinho-camiseta-manga-comprida.jpg" class="img-fluid"
             alt="Camiseta manga comprida">
         </figure>
 
         <!-- Dados do Produto -->
-        <section class="col-md-5 d-flex flex-column justify-content-around">
+        <section class="col-md-5 mb-5 d-flex flex-column justify-content-around">
           <article class="produtos-conteudo">
             <h1>Camiseta manga comprida</h1>
             <p>
@@ -181,6 +181,7 @@
               através de lançamentos exclusivos de moda Feminina.
             </p>
           </article>
+
           <article class="produtos-precos">
             <div class="produtos-stars">
               <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor"
@@ -210,25 +211,27 @@
                 Em até 12x sem Juros
               </span>
             </strong>
+
+            <form action="#">
+              <div class="form-group ">
+                <label for="produto-quantidade-itens">Quantidade</label>
+                <select class="form-select" id="produto-quantidade-itens">
+                  <option>1</option>
+                  <option>2</option>
+                  <option>3</option>
+                  <option>4</option>
+                  <option>4</option>
+                </select>
+              </div>
+
+              <button type="submit" class="btn btn-success col-12 mt-2">Comprar</button>
+            </form>
           </article>
-          <form action="#">
-            <div class="form-group">
-              <label for="produto-quantidade-itens">Quantidade</label>
-              <select class="form-select" id="produto-quantidade-itens">
-                <option>1</option>
-                <option>2</option>
-                <option>3</option>
-                <option>4</option>
-                <option>4</option>
-              </select>
-            </div>
-            <button type="submit" class="btn btn-success col-md-12">Comprar</button>
-          </form>
         </section>
         <!-- End Dados do Produto -->
 
         <!-- Plugin Facebook -->
-        <div class="fb-comments col-md-12 mt-5 mb-5"
+        <div class="fb-comments col-md-12 mt-2 mb-5"
           data-href="http://127.0.0.1:5500/Projetos/Hands-on-02/produto-camisa-manga-comprida.html" data-width="100%"
           data-numposts="5"></div>
       </article>
